# into_enum

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: macro.rs
